# splib2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
splib2/: CMakeLists.txt
splib2/docs/: CMakeLists.txt  Doxyfile.in
splib2/include/splib2/: List.hpp  SPLib.hpp  String.hpp  Util.hpp
splib2/include/splib2/inl/: List.inl
splib2/src/: SPLib.cpp  String.cpp
splib2_tests/: CMakeLists.txt
splib2_tests/src/List/: CMakeLists.txt  Concatenation.cpp  Constructors.cpp  Push.cpp  RemoveAt.cpp
splib2_tests/src/String/: CMakeLists.txt  Comparison.cpp  Concatenation.cpp  Constructors.cpp  FromCStr.cpp
submodules/: CMakeLists.txt
