FILE(GLOB_RECURSE splib_src src/*.cpp)
ADD_LIBRARY(splib SHARED ${splib_src})
TARGET_INCLUDE_DIRECTORIES(splib PUBLIC ./include)

TARGET_LINK_LIBRARIES(splib glfw tls)
TARGET_INCLUDE_DIRECTORIES(splib PRIVATE ${glfw_INCLUDE_DIRECTORIES} ${TLS_INCLUDE_DIR})

INSTALL(TARGETS splib
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib/splib2)
INSTALL(TARGETS)
INSTALL(DIRECTORY include/splib2 DESTINATION include)