SET(GLFW_INSTALL OFF CACHE BOOL "Install GLFW" FORCE)
ADD_SUBDIRECTORY(glfw)
SET(LIBRESSL_APPS OFF CACHE BOOL "Build LibreSSL Apps (test)" FORCE)
SET(LIBRESSL_TESTS OFF CACHE BOOL "Build LibreSSL Tests" FORCE)
ADD_SUBDIRECTORY(libressl)
SET(TLS_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/submodules/libressl/include" PARENT_SCOPE)